fix labels not showing after select

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -94,3 +94,10 @@ dd {
 .side-nav .collapsible-body li a, .side-nav.fixed .collapsible-body li a {
     padding-left: 45px;
 }
+
+.select-wrapper + label {
+    position: relative;
+    top: 0;
+    font-size: .8rem;
+    color: #9e9e9e;
+}
